--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^2.9.2"
   },
   "dependencies": {
+    "color": "^2.0.1",
     "dat-gui": "^0.5.0",
     "p5": "^0.5.16",
     "p5.js-svg": "^0.5.2"
